# K-Means-Clustering-Image-Compression

./: CMakeLists.txt  test.cpp
include/: kmeans.hpp
src/: kmeans.cpp  main.cpp
